--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,6 +21,9 @@ on:
   schedule:
     - cron: "0 15 * * 0"   # Every Sunday, 3 hours after midday
 
+permissions:
+  contents: read
+
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
@@ -52,6 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: integration-tests
     environment: delivery
+    permissions:
+      contents: write
     if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
