--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,6 +21,9 @@ on:
   schedule:
     - cron: "0 15 * * 0"   # Every Sunday, 3 hours after midday
 
+permissions:
+  contents: read
+
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
@@ -31,12 +34,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up PHP ${{ matrix.php-version }}
-        uses: php-actions/composer@v6
+        uses: php-actions/composer@8a65f0d3c6a1d17ca4800491a40b5756a4c164f3 # v6
         with:
           php_version: ${{ matrix.php-version }}
       - name: Test with phpunit
         if: ${{ matrix.php-version == '8.3' &&
-                github.repository_owner == 'onfido' }}
+          github.repository_owner == 'onfido' &&
+          (github.event_name == 'pull_request' || github.event_name == 'release') }}
         run: |
           vendor/bin/phpunit
         env:
@@ -51,6 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: integration-tests
     environment: delivery
+    permissions:
+      contents: write
     if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
